force-app/main/default/objects/Position__c/fields/Access_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Access_Company_ID__c</fullName>
    <formula>Account__r.Access_Company_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Company ID</label>
    <type>Text</type>
</CustomField>