force-app/main/default/objects/Position__c/fields/Computer_Skills__c.field-meta.xml
<CustomField>
    <fullName>Computer_Skills__c</fullName>
    <label>Computer Skills</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>