force-app/main/default/objects/Position__c/fields/Conviction_Policy__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Policy__c</fullName>
    <label>Conviction Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
            <value>
                <fullName>Friendly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>