force-app/main/default/objects/Position__c/fields/Legacy_Owner__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Owner__c</fullName>
    <label>Legacy Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>