force-app/main/default/objects/Position__c/fields/Position_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Position_Requirements__c</fullName>
    <label>Position Requirements</label>
    <type>TextArea</type>
</CustomField>