force-app/main/default/objects/Position__c/fields/Resume_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Resume_Submit_Date__c</fullName>
    <label>Resume Submit Date</label>
    <type>Date</type>
</CustomField>