force-app/main/default/objects/Position__c/fields/Wage__c.field-meta.xml
<CustomField>
    <fullName>Wage__c</fullName>
    <label>Wage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>